--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "glob": "^10.3.10",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
+  },
+  "dependencies": {
+    "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow/tfjs": "^4.16.0"
   }
 }
