--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow-models/pose-detection": "^2.1.3",
     "@tensorflow/tfjs": "^4.16.0"
   }
 }
