--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@types/node": "^20.10.6",
     "glob": "^10.3.10",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.2.6"
   },
   "dependencies": {
     "@tensorflow-models/coco-ssd": "^2.2.3",
     "@tensorflow-models/pose-detection": "^2.1.3",
-    "@tensorflow/tfjs": "^4.16.0"
+    "@tensorflow/tfjs": "^4.16.0",
+    "@tensorflow/tfjs-vis": "^1.5.1"
   }
 }
